<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.employee.ui.fragment.UsersFragment">

    <RadioGroup
        android:id="@+id/rg_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:checked="true"
            android:text="@string/general_list"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/asc_list"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/active_user"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_allUserList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_order"
        android:layout_marginTop="@dimen/_5sdp"
        android:scrollbars="none"
        tools:listitem="@layout/row_item_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_noDataFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_user_found"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="@color/pink"
        android:src="@drawable/ic_baseline_person_add_24" />
</RelativeLayout>