<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_parkingInfoDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/pink" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/create_an_user"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:text="@string/enter_name"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/rounded_border"
                    android:ellipsize="end"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:padding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="normal" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:text="@string/enter_email_id"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_emailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/rounded_border"
                    android:ellipsize="end"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:padding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:text="@string/select_gender"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="normal" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/rounded_border"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/female"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:singleLine="true"
                    android:text="@string/select_status"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="normal" />

                <RadioGroup
                    android:id="@+id/rg_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/rounded_border"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_inactive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/inactive"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_createUser"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/create_user"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>