<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.employee.ui.fragment.MetadataFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ll_userInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:elevation="@dimen/_8sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/pink"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/user_information"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:elevation="@dimen/_8sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"
                        tools:text="Text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"
                        tools:text="Hiren.Raiyani.patel@gmail.com" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"
                        tools:text="Male" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"
                        tools:text="Active" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_at"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_createdDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"
                        tools:text="2021-05-28T03:50:04.140+05:30" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/updated_at"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_updatedDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"
                        tools:text="2021-05-28T03:50:04.140+05:30" />
                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:elevation="@dimen/_8sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/pink"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/user_post_list"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/white"
                android:elevation="@dimen/_8sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_postList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        tools:listitem="@layout/row_item_post" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_noDataFound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_marginBottom="@dimen/_50sdp"
                        android:text="@string/no_post_found"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </RelativeLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_noUserSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/please_select_user_to_show_the_metadata"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:visibility="visible" />
</RelativeLayout>