<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/row_item"
    android:layout_marginTop="@dimen/_5sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Text"
            android:layout_marginStart="@dimen/_10sdp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Text Title"
            android:layout_marginStart="@dimen/_10sdp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Text description"
            android:layout_marginStart="@dimen/_10sdp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_3sdp"
        android:background="@color/light_text"/>
</LinearLayout>